# tutorials

OpenCVDemo/: classify_utils.py  main.py
java/log-kafka-elk-demo/src/main/resources/: kafka-logstash-es.conf  logback.xml
java/oauth-demo/: .gitignore  pom.xml
java/oauth-demo/src/main/resources/: application.yml
java/oauth-demo/src/main/resources/templates/: index.ftl
java/sso-demo/: pom.xml
java/sso-demo/client1/: pom.xml
java/sso-demo/client1/src/main/resources/: application.yml
java/sso-demo/client2/: pom.xml
log-kafka-elk-demo/: pom.xml
oauth-demo/: pom.xml
oauth-demo/src/main/resources/: application.yml
python/OpenCVDemo/: CVImageWidget.py  ClassificationWidget.py  FaceDetectWidget.py  HistogramWidget.py  MatplotCanvasWidget.py  MotionTrackWidget.py  SegmentWidget.py  cap.mov  demo_utils.py  main.py  motion_track_utils.py  requirements.txt
python/django-antd-pro/backend/dj_admin/: manage.py  requirements.txt
python/django-antd-pro/backend/dj_admin/account/: models.py  views.py
python/django-antd-pro/backend/dj_admin/dj_admin/: asgi.py  settings.py  urls.py  wsgi.py
python/machine-learning/: image.ipynb  tensorflow.ipynb
python/machine-learning/.ipynb_checkpoints/: tensorflow-checkpoint.ipynb
qt/QtRTSP/: .gitignore  CMakeLists.txt  FrameQueue.cpp  FrameQueue.hpp  Makefile  MediaState.cpp  MediaState.hpp  PacketQueue.cpp  PacketQueue.hpp  README.txt  VideoDecoder.cpp  VideoDecoder.hpp  VideoGrabber.cpp  VideoGrabber.hpp  VideoImageWidget.cpp  VideoImageWidget.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
sso-demo/: pom.xml
sso-demo/client1/src/main/resources/: application.yml
sso-demo/client2/src/main/resources/: application.yml
(+34 files in other folders)
